# multiqc_mga2_plugin

./: .gitignore  README.md  pyproject.toml  setup.py
multiqc_mga2/: __init__.py  cli.py  colour.py  custom_code.py  mga2.py
multiqc_mga2/assets/css/: multiqc_mga2.css
multiqc_mga2/modules/mga2/: __init__.py  colour.py  mga2.py  mga_structures.py
