[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [ "multiqc_mga2" ]

[project]
version = '2.1'
name = 'multiqc_mga2_plugin'
authors = [{ name = 'Richard Bowers', email = 'richard.bowers@cruk.cam.ac.uk' }]
description = "Multi Genome Alignment 2 MultiQC plugin"
license = { text = "MIT License" }
requires-python = ">=3.8"
dependencies = [ 'multiqc>=1.27' ]
keywords = [ 'bioinformatics', 'contamination' ]
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Environment :: Web Environment',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Programming Language :: Python',
    'Programming Language :: JavaScript',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
    'Topic :: Scientific/Engineering :: Visualization',
]

[project.urls]
Homepage = 'https://github.com/crukci-bioinformatics/multiqc_mga2_plugin'

[project.entry-points."multiqc.modules.v1"]
mga2 = "multiqc_mga2.mga2:MultiGenomeAlignmentModule"

[project.entry-points."multiqc.cli_options.v1"]
mga2_sequencing_run = "multiqc_mga2.cli:mga2_sequencing_run"
mga2_title = "multiqc_mga2.cli:mga2_title"
mga2_datasets = "multiqc_mga2.cli:mga2_datasets"

[project.entry-points."multiqc.hooks.v1"]
execution_start = "multiqc_mga2.custom_code:mga2_plugin_execution_start"
